--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span>
-          <span></span>
           <div class="visually-hidden">Меню</div>
         </button>
         <ul class="burger-menu">
@@ -159,7 +157,7 @@
             <a href="#contacts" class="burger-menu__item__link">Контакты</a>
           </li>
           <li class="burger-menu__item">
-            <a href="tel:+7-902-167-43-46" class="menu__tel"
+            <a href="tel:+7-902-167-43-46" class="burger-menu__item__link tel"
               >+7 (902) 167-43-46</a
             >
           </li>
@@ -176,6 +174,7 @@
           <div class="intro__stripe"></div>
           <div class="intro__sub-wrapper">
             <img
+              class="intro__icon"
               src="/img/law.svg"
               alt="Весы правосудия. Иконка"
               width="95"
@@ -459,6 +458,7 @@
           <address class="address">
             <div class="about">
               <img
+                class="address__logo"
                 src="/img/logo.svg"
                 alt="Логотип адвокада"
                 width="54"
