--- a/index.html
+++ b/index.html
@@ -4,45 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Более 19 лет работаю в Улан-Удэ и оказываю свою профессиональную помощь в уголовных, административных и гражданских делах, а также в досудебных урегулированиях споров. Звоните и обращайтесь за помощью в защите Ваших интересов!"
+    />
+    <meta
+      name="keywords"
+      content="Вторушин Сергей Александрович, адвокат в Улан-Удэ, адвокат, представительство в суде, юридическая консультация, помощь адвоката, составление иска"
+    />
     <meta name="author" content="© Вторушин Сергей Александрович" />
     <meta name="robots" content="all" />
     <title>Адвокат Вторушин Сергей Александрович</title>
 
+    <!-- <link rel="canonical" href="https://advokat-vtorushin.ru"> -->
+
     <!-- <meta property="og:type" content="website" />
-    <meta property="og:title" content="Адвокат Вторушин Сергей Александрович" />
-    <meta property="og:url" content="https://www.ejectorsystems.ru/" />
+    <meta property="og:site_name" content="Адвокат | Вторушин С.А." />
+    <meta property="og:url" content="https://advokat-vtorushin.ru" />
+    <meta property="og:locale" content="ru" />
+    <meta name="twitter:creator" content="© Вторушин Сергей Александрович">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="Адвокат | Вторушин С.А." />
     <meta
       property="og:description"
-      content=""
+      content="Более 19 лет работаю в Улан-Удэ и оказываю свою профессиональную помощь в уголовных, административных и гражданских делах, а также в досудебных урегулированиях споров. Звоните и обращайтесь за помощью в защите Ваших интересов!"
     />
-    <meta property="og:locale" content="ru" />
-    <meta property="og:site_name" content="ejectorsystems.ru" />
-
     <meta
       property="og:image"
-      content="https://www.ejectorsystems.ru/img/og_img.avif"
+      content="https://advokat-vtorushin.ru/img/og_img.jpg"
     />
-    <meta property="og:image:type" content="image/avif" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:height:alt"
-      content="Баннер компании ООО Эжекторные системы"
+      content="Баннер. Адвокат Вторушин Сергей Александрович"
     />
-
-    <meta
-      property="og:image"
-      content="https://www.ejectorsystems.ru/img/og_img.jpg"
-    />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta
-      property="og:image:height:alt"
-      content="Баннер компании ООО Эжекторные системы"
-    /> -->
+     -->
 
     <link rel="icon" href="/favicon/favicon.ico" />
     <link
@@ -539,16 +536,10 @@
               </a>
             </div>
           </address>
-          <iframe
-            class="yandex-map"
-            src="https://yandex.ru/map-widget/v1/?ll=107.611451%2C51.812465&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1Nzc0NTEzMBJm0KDQvtGB0YHQuNGPLCDQoNC10YHQv9GD0LHQu9C40LrQsCDQkdGD0YDRj9GC0LjRjywg0KPQu9Cw0L0t0KPQtNGNLCDQodC-0LvQvdC10YfQvdCw0Y8g0YPQu9C40YbQsCwgN9CQIgoNEDnXQhX2P09C&z=17.05"
-            width="520"
-            height="420"
-          ></iframe>
+          <div class="yandex-map"></div>
         </div>
       </section>
     </main>
-
     <footer class="footer">
       <div class="footer__container">
         <nav>
@@ -582,6 +573,7 @@
                 height="24"
                 fill="#736d5e"
               >
+                <title>Ссылка на Github</title>
                 <path
                   d="M8 18.8c0 .1 0 .2-.2.2s-.3 0-.3-.2l.3-.1.2.1Zm-1.5-.2c0 .1 0 .2.2.3l.3-.1c0-.1 0-.2-.2-.3l-.3.1Zm2.2 0c-.2 0-.3 0-.3.2l.3.1c.2 0 .3-.1.2-.2l-.2-.2ZM11.8 0C5.1 0 0 5.1 0 11.8c0 5.4 3.4 10 8.2 11.6.6 0 .8-.3.8-.6v-3s-3.4.8-4-1.4c0 0-.6-1.4-1.4-1.8 0 0-1.1-.7 0-.7 0 0 1.3 0 2 1.2 1 1.9 2.8 1.3 3.5 1 0-.7.4-1.3.7-1.6-2.7-.3-5.4-.7-5.4-5.4 0-1.3.4-2 1.1-2.8 0-.3-.5-1.6.2-3.3C6.7 4.7 9 6.3 9 6.3a11.4 11.4 0 0 1 6 0s2.4-1.6 3.4-1.3c.7 1.7.3 3 .1 3.3.8.9 1.3 1.5 1.3 2.8 0 4.7-2.9 5-5.6 5.4.5.4.9 1.1.9 2.2v4c0 .4.2.8.8.7A12 12 0 0 0 24 11.8C24 5.1 18.6 0 11.8 0ZM4.7 16.7v.2c.1.1.2.2.3 0v-.2h-.3Zm-.5-.4v.2h.3l-.1-.2h-.2ZM5.7 18l.1.3h.3v-.2c-.1-.1-.3-.2-.4 0Zm-.5-.7v.3c0 .1.2.2.3.1v-.3c-.1-.1-.2-.2-.3 0Z"
                 />
@@ -598,6 +590,7 @@
                 height="24"
                 fill="#736d5e"
               >
+                <title>Ссылка на Telegram</title>
                 <path
                   d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm5.56 8.16c-.17 1.9-.96 6.5-1.36 8.63-.16.9-.5 1.2-.81 1.23-.7.06-1.23-.46-1.9-.9-1.06-.7-1.66-1.13-2.68-1.8-1.19-.78-.42-1.22.26-1.92.18-.18 3.24-2.97 3.3-3.22.01-.04.02-.15-.06-.22-.07-.06-.17-.04-.24-.02-.11.02-1.8 1.14-5.07 3.34-.47.33-.9.5-1.3.48a8.64 8.64 0 0 1-1.86-.44c-.75-.24-1.35-.37-1.3-.79.02-.21.32-.43.9-.66 3.5-1.52 5.82-2.53 7-3.02 3.32-1.38 4.02-1.62 4.47-1.63.1 0 .32.02.46.14.1.08.16.2.17.32.03.16.03.32.02.48Z"
                 />
